# vertano

./: .gitignore  README.md
.github/workflows/: release.yml
cli/: README.md  TESTING.md  TEST_RESULTS.md  USAGE.md  generate_test_samples.py  test_vertano.py  transcribe.py  transcribe_v2.py  vertano.py
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  model.rs
desktop/src-tauri/tests/: decode_tests.rs  model_tests.rs  output_tests.rs  queue_tests.rs  scan_tests.rs  whisper_integration.rs
desktop/ui/: app.js  index.html  styles.css
docs/: 404.html  YOUTUBE_CONTENT.md  index.html  llms.txt  sitemap-0.xml  sitemap-index.xml  sitemap.xml
docs/_astro/: Base.DtgKdlsi.css
docs/app/: app.js  captions.js  index.html  worker.js
docs/app/tests/: captions.test.mjs
docs/download/: index.html
docs/features/: index.html
docs/languages/: index.html
docs/superpowers/specs/: 2026-07-16-cloud-transcription-design.md  2026-07-17-mac-caption-translation-design.md  2026-07-17-mac-model-tiers-translation-design.md  (+1 more)
docs/youtube-captions/: index.html
mac/: Package.swift  README.md
mac/scripts/: caption-smoke-test.sh  e2e-test.sh  guard-test.sh  make-app.sh
seo/: COMPETITOR-ANALYSIS.md  CONTENT-CALENDAR.md  IMPLEMENTATION-ROADMAP.md  SEO-STRATEGY.md  SITE-STRUCTURE.md
web/: astro.config.mjs  package-lock.json  package.json
web/notes/: BLOG_POST.md  YOUTUBE_CONTENT.md
web/public/: robots.txt
(+44 files in other folders)
