[package]
name = "vertano"
version = "0.2.0"
description = "Vertano — offline batch audio transcription for Windows and Linux"
edition = "2021"
license = "MIT"

[lib]
name = "vertano_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Decode stack: symphonia 0.5 line (stable API) + rubato 0.16 for resampling.
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.16"
whisper-rs = "0.16.0"
ureq = "2"
dirs = "6"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
hound = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
